# pennyworth

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARK.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: PORTING_GUI.md  architecture.md  desktop-app.md  getting-started.md  knowledge.md  releasing.md  screenshots.md
docs/images/: .gitkeep
examples/acme/: attribution.md  pennyworth-pack.toml  principal.md  team.json
examples/acme/skills/: deploy.md
scripts/: cut-release.sh  make-launcher.sh
src/pennyworth/: __init__.py  cli.py  pack.py  packs.py  profile.py  prompt.py  providers.py  runner.py  skills.py
src/pennyworth/app/: __init__.py  bridge.py  bundle.py  dictation.py  terminal.py  usage.py  window.py
src/pennyworth/app/web/: index.html
src/pennyworth/skills/: aws_docs_mcp.md  debugging.md  git.md  investigate.md  lean_product_reviewer.md  mcp_oauth.md  pr_context.md  testing.md  worth_it.md
tests/: test_app.py  test_clean_brain.py  test_cli.py  test_packs.py  test_profile.py  test_prompt_structure.py  test_providers.py  test_runner.py  test_skills.py  test_team_repos.py  test_terminal.py
