[tool.poetry]
name = "pennyworth"
version = "0.1.0"
description = "Alfred — a dignified butler-engineer AI companion. The open-source core."
authors = ["Haim Elbaz <haim@morning.co>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "pennyworth", from = "src" }]
include = [{ path = "src/pennyworth/app/web/*", format = ["sdist", "wheel"] }]

[tool.poetry.scripts]
alfred = "pennyworth.cli:main"
pennyworth = "pennyworth.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
pywebview = { version = ">=5.0", optional = true }

[tool.poetry.extras]
app = ["pywebview"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "B", "I"]
ignore = ["E501"]
