[tool.poetry]
name = "pennyworth"
version = "0.1.0"
description = "Pennyworth — a dignified butler-engineer AI companion you talk to. The open-source core."
authors = ["Haim Elbaz <haim@morning.co>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/elbazon/pennyworth"
repository = "https://github.com/elbazon/pennyworth"
documentation = "https://github.com/elbazon/pennyworth/tree/master/docs"
keywords = ["ai", "assistant", "agent", "developer-tools", "claude", "cli", "butler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development",
    "Environment :: Console",
]
packages = [{ include = "pennyworth", from = "src" }]
include = [
    { path = "src/pennyworth/app/web/*", format = ["sdist", "wheel"] },
    { path = "src/pennyworth/skills/*.md", format = ["sdist", "wheel"] },
]

[tool.poetry.scripts]
alfred = "pennyworth.cli:main"
pennyworth = "pennyworth.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
pywebview = { version = ">=5.0", optional = true }

[tool.poetry.extras]
app = ["pywebview"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"  # >=9.0.3 fixes GHSA-6w46-j5rx-g56g (tmpdir handling)
ruff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "B", "I"]
ignore = ["E501"]
